updated case study 2

--- a/casestudy1.html
+++ b/casestudy1.html
@@ -42,7 +42,7 @@
         </div><hr>  
 
          <div class="introduction">
-            <p class="topic">Introduction</p>
+            <p class="topic">Overview</p>
             <div class="content">
                 <p class="subtitle"></p>
                 <span class="text">Gym X is a fitness app set to help people achieve their 
