--- a/casestudy2.html
+++ b/casestudy2.html
@@ -24,12 +24,12 @@
 
     <div class="content1">
         <div class="image">
-            <img src="img/cover2.png" alt="">
+            <img src="img/easycover.png" alt="">
         </div>
         <div class="summary">
             <div class="timeline">
                 <p>Timeline</p>
-                <span>6 weeks</span>
+                <span>4 weeks</span>
             </div>
             <div class="role">
                 <p>Role</p>
@@ -42,7 +42,7 @@
         </div><hr>  
 
          <div class="introduction">
-            <p class="topic">Introduction</p>
+            <p class="topic">Overview</p>
             <div class="content">
                 <p class="subtitle"></p>
                 <span class="text">The challenge was to design a mobile app that will allow users to book flights, accommodation, and car for different destinations, while also addressing the user’s pain points.
@@ -55,9 +55,9 @@
             <div class="content">
                 <p class="subtitle">What should EasyTravel achieve?</p>
                 <span class="text">
-                    -Design an easy to use app with a friendly neat interface <br>
-                    -Make it easy for users to find fun activities at their holiday destinations <br>
-                    -Ensure user can organize all their travel plans in one itinery <br>
+                    <li>Design an easy to use app with a friendly neat interface </li>
+                    <li>Make it easy for users to find fun activities at their holiday destinations</li>
+                    <li>Ensure user can organize all their travel plans in one itinery </li>
                 </span><hr>
             </div>
         </div>
@@ -66,55 +66,34 @@
             <p class="topic">Design flow</p>
             <div class="content">
                 <p class="subtitle"></p>
-                <img src="img/designflow2.png" alt="" class="flow"><br>
-                <span class="text">
-                    -Design an easy to use app with a friendly neat interface <br>
-                    -Make it easy for users to find fun activities at their holiday destinations <br>
-                    -Ensure user can organize all their travel plans in one itinery <br>
-                </span><hr>
+                <img src="img/designflow2.png" alt="" class="flow"><hr>
             </div>
         </div>
 
         <div class="problem">
             <p class="topic">Problem</p>
             <div class="content">
-                <p class="subtitle">People want to work out from home more</p>
-                <span class="text">Ability to select places based on holiday activities
-Ability to organize all travel plans into one itinery
+                <p class="subtitle">Booking and plannning trips haven't been an easy one</p>
+                <span class="text">
+                    Many People find it exhausting to...
                 </span><hr>
             </div>
         </div>
 
 
-     <!--    <div class="research">
-            <p class="topic">User Research</p>
+        <div class="research">
+            <p class="topic">Research</p>
             <div class="content primary">
                 <p class="subtitle">Primary Research</p>
-                <span class="text">Qualitative research was carried through one on one interviews. 
-                    The goal of the interview was to understand the users needs, pain points and fitness goals.
-                </span>
+                <span class="text">Qualitative research was carried out. 
+                    The goal of the interview was to understand the users needs and pain points.
                 <div class="target">
                     <p class="t1 market">Target Market</p>
-                    <span class="t2 age">16-60 year olds</span>
-                </div>
-                <div class="interview">
-                    <p class="subtitle">Interview Questions</p>
-                    <span class="text">
-                        <li>Do you workout? If so, whats your motivation?</li>
-                        <li>How long have you been working out?</li>
-                        <li>Do you prefer home workouts or would you rather go to a physical gym?</li>
-                        <li>Based on answer to question above, why do you prefer that?</li>
-                        <li>Do you like to network at the gym or is it strictly business for you?</li>
-                        <li>What do you think of having an online instructor to follow up with you every week?</li>
-                        <li>Have you purchased a gym equipment? Please tell me how the process went, likes and dislikes too </li>
-                        <li>Do you currently follow a diet? If not, why?</li>
-                        <li>Would you like to receive diet meal plans curated for you?</li>
-                        <li>Have you ever used a workout app or how do you pick out exercises ?</li>
-                        <li>How often do you work out (be specific)</li>
+                    <span class="t2 age">18-50 year olds</span>
                 </div>
                 <div class="insight">
-                    <p class="t1 insights">Key Insights from Interview</p>
-                    <span class="t2">Based on the one-on-one interviews I carried out,  It was discovered that many people 
+                    <p class="t1 insights">Key Insights from User Research</p>
+                    <span class="t2">Based on the one-on-one research I carried out,  It was discovered that many people 
                         would like to connect at the gym and would also like a relatable diet they can follow to stay fit and healthy.</span>
                 </div>
             </div>
@@ -131,41 +110,16 @@ Ability to organize all travel plans into one itinery
             </div>
         </div>
 
-        <div class="empathyMap">
-            <p class="topic">Empathy Map</p>
-            <div class="content">
-                <p class="subtitle">What do users think?</p>
-                <img src="img/empathymap.png" alt="" class="user map"><hr>
-            </div>
-        </div>
-
-        <div class="Personas">
-            <p class="topic">User Personas</p>
-            <div class="content">
-                <p class="subtitle">What do they want to be done differently?</p>
-                <img src="img/personas.png" alt="" class="user personas"><hr>
-            </div>
-        </div>
- -->
-        
-        <div class="statements">
-            <p class="topic">Problem Statements</p>
-            <div class="content">
-                <p class="subtitle">What are the user's pain points?</p>
-                <img src="img/problem statements.png" alt="" class="user t3"><hr>
-            </div>
-        </div>
 
         <div class="hmw">
             <p class="topic">How Might We Phrases</p>
             <div class="content">
                 <p class="subtitle"></p>
                 <span class="text">
-                    <li>How might we make the working out from home experience more effective?</li>
-                    <li>How might we make diet plans more suitable for Individuals in different geo locations?</li>
-                    <li>How might we help fellow gym enthusiasts network seamlessly? </li>
-                    <li>How might we provide better gym services online at affordable rates?</li>
-                    <li>How might we provide better gym services online at affordable rates?</li>
+                    <li>How might we make the process of finding a travel destination easier?</li>
+                    <li>How might we help users decide on tourist centres to visit?</li>
+                    <li>How might we help users stay keep their travel plans organized?</li>
+                    <li>How might we help users know a convenient seasons to visit a place?</li>
                 </span><hr>
             </div>
         </div>
@@ -182,11 +136,16 @@ Ability to organize all travel plans into one itinery
             <div class="content">
                 <p class="subtitle">What are the user's pain points?</p>
                 <span class="text">
-                    <li>Most diet meal plans are not curated for the average Nigerian.</li>
-                    <li>Affordability. Cheaper Gym Services</li>
-                    <li>Ability to network and meet like minded individuals.</li>
-                    <li>Accessibility to the purchase of quality gym equipments.</li>
-                </span><hr>
+                    <li><b> User 1:</b> Carlos. <br>
+                    <b>Age:</b> 27 <br>
+                    <b>Pain Point:</b> Not always sure what activities to do when I get to my holiday destination</li>
+                </span>
+                <span class="text">
+                    <li><b> User 2:</b> Crystal. <br>
+                    <b>Age:</b> 25 <br>
+                    <b>Pain Point:</b> How do I organize and share my flight, accommodation and transport in one go?</li>
+                </span>
+                <hr>
             </div>
         </div>        
 
@@ -194,7 +153,7 @@ Ability to organize all travel plans into one itinery
             <p class="topic">The Solution</p>
             <div class="content">
                 <p class="subtitle">How can we solve user's problems?</p>
-                <img src="img/solution.png" alt="" class="user t3"><hr>
+                <img src="img/solution2.png" alt="" class="user t3"><hr>
             </div>
         </div>
 
@@ -202,7 +161,7 @@ Ability to organize all travel plans into one itinery
             <p class="topic">User Flow</p>
             <div class="content">
                 <p class="subtitle">App Structure</p>
-                <img src="img/userflow.png" alt="" class="user t3 archi"><hr>
+                <img src="img/userflow(!).png" alt="" class="user t3 archi archi2"><hr>
             </div>
         </div>
 
@@ -236,23 +195,35 @@ Ability to organize all travel plans into one itinery
                 <p class="subtitle">Final Designs</p>
                 <div class="splash">
                     <p class="subtitle t5">Splash and Onboarding Screens</p>
-                    <img src="img/onboarding.png" alt="" class="user t3">
+                    <img src="img/OBD.png" alt="" class="user t3">
                 </div>
                 <div class="logins">
                     <p class="subtitle t5">Sign Up Screens</p>
-                    <img src="img/hfw1.png" alt="" class="user t3">
+                    <img src="img/Login2.png" alt="" class="user t3">
                 </div>
                 <div class="dashboard">
-                    <p class="subtitle t5">Dashboard</p>
-                    <img src="img/hfw2.png" alt="" class="user t3">
+                    <p class="subtitle t5">Home Page</p>
+                    <img src="img/flight.png" alt="" class="user t3">
                 </div>
                 <div class="workout">
-                    <p class="subtitle t5">Workouts</p>
-                    <img src="img/hfw3.png" alt="" class="user t3">
+                    <p class="subtitle t5">Explore</p>
+                    <img src="img/explore.png" alt="" class="user t3">
                 </div>
                 <div class="network">
-                    <p class="subtitle t5">Network</p>
-                    <img src="img/hfw4.png" alt="" class="user t3">
+                    <p class="subtitle t5">Find a Hotel</p>
+                    <img src="img/map1.png" alt="" class="user t3">
+                </div>
+                <div class="map">
+                    <p class="subtitle t5">Map Distance</p>
+                    <img src="img/map 2.png" alt="" class="user t3">
+                </div>
+                <div class="network">
+                    <p class="subtitle t5">Itinery</p>
+                    <img src="img/itinery1.png" alt="" class="user t3">
+                </div>
+                <div class="network">
+                    <p class="subtitle t5">Itinery</p>
+                    <img src="img/itinery2.png" alt="" class="user t3">
                 </div>
                <!--  <div class="chat">
                     <p class="subtitle t5">Chat & Get reminders </p>
@@ -261,14 +232,6 @@ Ability to organize all travel plans into one itinery
             </div>
         </div>
         <span class="viewbtn">View Prototype</span><hr>
-        <div class="usability">
-            <p class="topic">Usability Study</p>
-            <div class="content">
-                <p class="subtitle">Based on the usability study that was carried out amongst 6 target users and all the feedbacks were positive. 
-                    The following feedbacks were noted.</p>
-                <img src="img/usability study.png" alt="" class="user t3"><hr>
-            </div>
-        </div>
 
         <div class="takeaway">
             <p class="topic">Takeaways</p>
@@ -277,11 +240,11 @@ Ability to organize all travel plans into one itinery
                     I got to understand and empathize with them then ensured that their noted pain points were at the front of my mind while designing.
                     Both the secondary and primary research helped shape my thinking and influenced my design decision process.</p>
                 <span class="text">
-                    <li>Worrying less about details. I was initially overly focused on the UI but I quickly realized there is no great product 
+                    <li><b>Worrying less about details.</b> I was initially overly focused on the UI but I quickly realized there is no great product 
                         without a properly structured UX.</li>
-                    <li>It is important to keep the users’ pain points front and center. This helped to shape my thinking, and made me more 
+                    <li><b>It is important to keep the users’ pain points front and center.</b> This helped to shape my thinking, and made me more 
                         focused on solving the problem. I asked myself questions like:  How do I want my users to feel? How can I make their lives easier?</li>
-                    <li>Based on usability testing, some users did not want to have to google every location; instead, they wanted to be 
+                    <li><b>Based on usability testing</b>, some users did not want to have to google every location; instead, they wanted to be 
                         able to get adequte information about different places right from the app, which the app provides. 
                         Some others wanted an easier way to keep track of travel deals without constantly checking the app.</li>
                 </span>
