--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <hr><br>
 
     <div class="footer">
-        <span class="greeting">Thanks for viewing my portfolio!</span><br><br>
+        <span class="greeting">Get In Touch</span><br><br>
         <span>Designed and Built by me| © 2022 Bolu Jemiriye All Rights Reserved</span><br>
         <div class="socials">
             <a href="">Email</a>/
