added resume link

--- a/casestudy1.html
+++ b/casestudy1.html
@@ -12,7 +12,7 @@
     <nav>
         <a href="index.html"><img src="img/Nisolae.svg" alt=""></a>
         <ul class="nav-list">
-            <li class="navlinks"><a href="#work">Work</a></li>
+            <li class="navlinks"><a href="index.html">Work</a></li>
             <li class="navlinks"><a href="">Resume</a></li>
         </ul>
         <div class="hamburger">
