--- a/casestudy2.html
+++ b/casestudy2.html
@@ -12,7 +12,7 @@
     <nav>
         <a href="index.html"><img src="img/Nisolae.svg" alt=""></a>
         <ul class="nav-list">
-            <li class="navlinks"><a href="#work">Work</a></li>
+            <li class="navlinks"><a href="index.html">Work</a></li>
             <li class="navlinks"><a href="">Resume</a></li>
         </ul>
         <div class="hamburger">
@@ -62,13 +62,13 @@
             </div>
         </div>
 
-        <div class="designflow">
+       <!--  <div class="designflow">
             <p class="topic">Design flow</p>
             <div class="content">
                 <p class="subtitle"></p>
                 <img src="img/designflow2.png" alt="" class="flow"><hr>
             </div>
-        </div>
+        </div> -->
 
         <div class="problem">
             <p class="topic">Problem</p>
@@ -232,7 +232,7 @@
             </div>
         </div>
         <span class="viewbtn">View Prototype</span><hr>
-
+ 
         <div class="takeaway">
             <p class="topic">Takeaways</p>
             <div class="content">
