--- a/index.html
+++ b/index.html
@@ -9,18 +9,34 @@
     <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 <body>
-    <nav>
+
+
+    <nav class="main-nav">
         <a href=""><img src="img/Nisolae.svg" alt=""></a>
         <ul class="nav-list">
             <li class="navlinks"><a href="#work">Work</a></li>
-            <li class="navlinks"><a href="">Resume</a></li>
+            <li class="navlinks"><a href="https://drive.google.com/file/d/11aiS3ViQq-GsozlBRLpZM2KKSMHhRGe4/view?usp=sharing">Resume</a></li>
         </ul>
         <div class="hamburger">
             <div class="line line1"></div>
-           <!--  <div class="line line2"></div> -->
-            <div class="line line3"></div>
+            <div class="line line2"></div> 
+            <div class="line line3"></div> 
         </div>
     </nav>
+
+    <!-- <div class="overlay">
+        <div class="close">
+            <a href=""><img src="img/Nisolae.svg" alt=""></a>
+            <a href=""><img src="img/Nisolae.svg" alt=""></a>
+        </div>
+        <ul class="nav-overlay">
+            <li class="navlinks links2"><a href="#work">Work</a></li>
+            <li class="navlinks links2"><a href="https://drive.google.com/file/d/11aiS3ViQq-GsozlBRLpZM2KKSMHhRGe4/view?usp=sharing">Resume</a></li>
+        </ul>
+    </div> -->
+
+
+    
 
     <div class="header">
         <span class="bigheader">Hello, I'm Boluwatifenisolae 👋</span>
