updated resume link

--- a/casestudy1.html
+++ b/casestudy1.html
@@ -13,7 +13,7 @@
         <a href="index.html"><img src="img/Nisolae.svg" alt=""></a>
         <ul class="nav-list">
             <li class="navlinks"><a href="index.html">Work</a></li>
-            <li class="navlinks"><a href="">Resume</a></li>
+            <li class="navlinks"><a href="https://drive.google.com/file/d/11aiS3ViQq-GsozlBRLpZM2KKSMHhRGe4/view?usp=sharing">Resume</a></li>
         </ul>
         <div class="hamburger">
             <div class="line line1"></div>
@@ -100,7 +100,7 @@
                 </span>
                 <div class="target">
                     <p class="t1 market">Target Market</p>
-                    <span class="t2 age">16-60 year olds</span>
+                    <span class="t2 age">16-40 year olds</span>
                 </div>
                 <div class="interview">
                     <p class="subtitle">Interview Questions</p>
