--- a/casestudy2.html
+++ b/casestudy2.html
@@ -13,7 +13,7 @@
         <a href="index.html"><img src="img/Nisolae.svg" alt=""></a>
         <ul class="nav-list">
             <li class="navlinks"><a href="index.html">Work</a></li>
-            <li class="navlinks"><a href="">Resume</a></li>
+            <li class="navlinks"><a href="https://drive.google.com/file/d/11aiS3ViQq-GsozlBRLpZM2KKSMHhRGe4/view?usp=sharing">Resume</a></li>
         </ul>
         <div class="hamburger">
             <div class="line line1"></div>
@@ -85,21 +85,32 @@
             <p class="topic">Research</p>
             <div class="content primary">
                 <p class="subtitle">Primary Research</p>
-                <span class="text">Qualitative research was carried out. 
-                    The goal of the interview was to understand the users needs and pain points.
+                <span class="text">Before I began, I wanted to outline the scope of my research. 
+                    I created a research plan to help keep me focused on the research goals at all times, 
+                    as well as the steps I needed to take to complete it.
+                     I primarily wanted to get answers to some of the most pressing questions I had:
+
+                     <span class="text">
+                        <li>How might we make the process of finding a travel destination easier?</li>
+                        <li>How might we help users decide on tourist centres to visit?</li>
+                        <li>How might we help users stay keep their travel plans organized?</li>
+                        <li>How might we help users know a convenient seasons to visit a place?</li>
+                    </span> 
                 <div class="target">
                     <p class="t1 market">Target Market</p>
-                    <span class="t2 age">18-50 year olds</span>
+                    <span class="t2 age">23-35 year olds</span>
                 </div>
                 <div class="insight">
-                    <p class="t1 insights">Key Insights from User Research</p>
-                    <span class="t2">Based on the one-on-one research I carried out,  It was discovered that many people 
-                        would like to connect at the gym and would also like a relatable diet they can follow to stay fit and healthy.</span>
+                    <p class="t1 insights">Key Insights from Research</p>
+                    <span class="t2">Based on the research I carried out,  The use of mobile travel apps simplifies vacation planning significantly
+                        and most users would love one that simplifies the process even more. They would love for an app that is user friendly and meets all
+                        basic needs like booking flight and accomodation.
+                    </span>
                 </div>
             </div>
             <div class="content secondary">
                 <p class="subtitle">Secondary Research</p>
-                <span class="text">Based on the secondary research i carried out, it was collated to be that ever 
+                <span class="text">Based on the industry research i carried out, it was collated to be that ever 
                     since the pandemic, the popularity of health and fitness apps has skyrocketed. <br> More people have opted 
                     for home workouts to going to the gym because they believe it is cheaper, straight-forward and easily accessible.
                     <br> According to eMareketer, the number of fitness app users are estimated at over 84 million 
