--- a/casestudy2.html
+++ b/casestudy2.html
@@ -91,10 +91,9 @@
                      I primarily wanted to get answers to some of the most pressing questions I had:
 
                      <span class="text">
-                        <li>How might we make the process of finding a travel destination easier?</li>
-                        <li>How might we help users decide on tourist centres to visit?</li>
-                        <li>How might we help users stay keep their travel plans organized?</li>
-                        <li>How might we help users know a convenient seasons to visit a place?</li>
+                        <li>What are people's motivations and pain points when it comes to trip planning and management?</li>
+                        <li>How can people tell the "best time" to visit a city?</li>
+                        <li>What features would they look for when booking a vacation through a travel agency online?</li>
                     </span> 
                 <div class="target">
                     <p class="t1 market">Target Market</p>
@@ -110,14 +109,31 @@
             </div>
             <div class="content secondary">
                 <p class="subtitle">Secondary Research</p>
-                <span class="text">Based on the industry research i carried out, it was collated to be that ever 
-                    since the pandemic, the popularity of health and fitness apps has skyrocketed. <br> More people have opted 
-                    for home workouts to going to the gym because they believe it is cheaper, straight-forward and easily accessible.
-                    <br> According to eMareketer, the number of fitness app users are estimated at over 84 million 
-                    by the end of 2022 and according to Technavio, the global fitness market will grow by USD 3.5 billion 
-                    during 2021-2025. <br> Also, GlobalNewswire estimated that the fitness app market will touch 14.64 billion (approx.) by 
-                    the year 2027. which is why there is a need to improve the user experience to ensure that the user’s experience is smooth and useful.
-                </span><hr>
+                <span class="text">Based on the market analysis i carried out, <br>
+                    The online travel booking industry was among those hardest hit by the coronavirus pandemic, 
+                    with some apps reporting more than 70% less traffic and bookings in 2019 than in 2018.
+                    <br> The situation improved slightly in 2021, though most apps and agencies 
+                    still reported lower numbers than in 2019. In some countries, outbreaks continue to impede travel.
+                    International tourism has recovered since January 2022, 
+                    compared to the weak start in the last year: Europe (+199%) and the Americas (+97%). 
+                    The Middle East (+89%) and Africa (+51%) experienced a travel business growth in Jan 2022 compared to 2021. 
+                    While Asia and the Pacific saw a 44% increase in business growth, 
+                    some destinations went through the decrease in international arrivals in 2019. 
+                    After the tourism growth of 2022 and 2021, international arrivals will continue to recover by 2022. In March 2022, 
+                    12 places had no covid-19 pandemic restrictions and witnessed a rise of tourist attractions eliminating the restriction. 
+                    It helps to unleash pent-up demand for travel and tourism.(Adamosoft, business of apps,2022) <br> 
+                    Travel apps are used by travelers for online ticketing, hotel booking, 
+                    destination details, locating local attractions and food outlets, exploring new destinations, 
+                    finding reviews about a destination they plan to visit, sharing pictures from their trip, 
+                    and providing feedback on a destination, airline, hotel, or event.
+                </span>
+                
+                <p class="subtitle">Online booking app users 2017 to 2021 (bn)</p>
+                <div class="infogram-embed" data-id="1a9f15d8-3559-41b5-9f5f-577af8f5b8c6" data-type="interactive" data-title="online travel users"></div>
+
+                <p class="subtitle">Travel app worldwide gross bookings value ($bn)</p>
+                <div class="infogram-embed" data-id="e3fa48ed-b651-48e7-b6dd-6092826c30ce" data-type="interactive" data-title="online travel bookings"></div>
+                <hr>
             </div>
         </div>
 
@@ -271,5 +287,12 @@
             <a href="">Behance</a>
         </div>
     </div>
+
+
+    <script>
+    !function(e,i,n,s){var t="InfogramEmbeds",d=e.getElementsByTagName("script")[0];if(window[t]&&window[t].initialized)window[t].process&&window[t].process();else if(!e.getElementById(n))
+    {var o=e.createElement("script");o.async=1,o.id=n,o.src="https://e.infogram.com/js/dist/embed-loader-min.js",d.parentNode.insertBefore(o,d)}}(document,0,"infogram-async");
+    </script>
+    <script>!function(e,i,n,s){var t="InfogramEmbeds",d=e.getElementsByTagName("script")[0];if(window[t]&&window[t].initialized)window[t].process&&window[t].process();else if(!e.getElementById(n)){var o=e.createElement("script");o.async=1,o.id=n,o.src="https://e.infogram.com/js/dist/embed-loader-min.js",d.parentNode.insertBefore(o,d)}}(document,0,"infogram-async");</script>
 </body>
 </html>
