--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
     <div class="header">
         <span class="bigheader">Hello, I'm Boluwatifenisolae 👋</span>
-        <h2>I love designing simple solutions to digital products.
+        <h2>I am a product designer and I enjoy <br>simplifying solutions for digital products.
+          <!--   From dy/dx to ui/ux -->
         </h2>
         <span class="smallheader">To find out more about me click <a href="">here</a></span>
     </div>
