image and content adjustments

--- a/casestudy1.html
+++ b/casestudy1.html
@@ -268,7 +268,7 @@
                 </div>
             </div>
         </div>
-        <span class="viewbtn">View Prototype</span><hr>
+        <!-- <span class="viewbtn">View Prototype</span> --><hr>
         <div class="usability">
             <p class="topic">Usability Study</p>
             <div class="content">
