--- a/casestudy2.html
+++ b/casestudy2.html
@@ -75,7 +75,7 @@
             <div class="content">
                 <p class="subtitle">Booking and plannning trips haven't been an easy one</p>
                 <span class="text">
-                    Many People find it exhausting to...
+                    Many People find it exhausting having to use multiple apps to: search for interesting places to visit, book flights, check for favourable weather conditions, plan their trips and so on. 
                 </span><hr>
             </div>
         </div>
@@ -89,7 +89,7 @@
                     I created a research plan to help keep me focused on the research goals at all times, 
                     as well as the steps I needed to take to complete it.
                      I primarily wanted to get answers to some of the most pressing questions I had:
-
+                    <br> <br>
                      <span class="text">
                         <li>What are people's motivations and pain points when it comes to trip planning and management?</li>
                         <li>How can people tell the "best time" to visit a city?</li>
@@ -126,6 +126,14 @@
                     destination details, locating local attractions and food outlets, exploring new destinations, 
                     finding reviews about a destination they plan to visit, sharing pictures from their trip, 
                     and providing feedback on a destination, airline, hotel, or event.
+
+                    <br>
+<!-- 
+                    <i> “The African travel sector is one of the fastest growing in the world.
+                         Technology is changing travel at an increasing pace, this is why building 
+                         a travel technology company in Africa and beyond is so exciting,”
+                        
+                        - Marek Zmysłowski, Co-founder, SunRoof</i> -->
                 </span>
                 
                 <p class="subtitle">Online booking app users 2017 to 2021 (bn)</p>
@@ -188,7 +196,7 @@
             <p class="topic">User Flow</p>
             <div class="content">
                 <p class="subtitle">App Structure</p>
-                <img src="img/userflow(!).png" alt="" class="user t3 archi archi2"><hr>
+                <img src="img/userflow(!) (1).png" alt="" class="user t3 archi archi2"><hr>
             </div>
         </div>
 
@@ -258,7 +266,7 @@
                 </div> -->
             </div>
         </div>
-        <span class="viewbtn">View Prototype</span><hr>
+       <!--  <span class="viewbtn">View Prototype</span> --><hr>
  
         <div class="takeaway">
             <p class="topic">Takeaways</p>
