added an about me section

--- a/casestudy2.html
+++ b/casestudy2.html
@@ -287,12 +287,12 @@
     </div><hr><br>
 
     <div class="footer">
-        <span class="greeting">Thanks for viewing my portfolio!</span><br><br>
+        <span class="greeting">Get In Touch</span><br><br>
         <span>Designed and Built by me| © 2022 Bolu Jemiriye All Rights Reserved</span><br>
         <div class="socials">
-            <a href="">Email</a>/
-            <a href="">Twitter</a>/
-            <a href="">Behance</a>
+            <a href="bjemiriye@gmail.com">Email</a>/
+            <a href="https://twitter.com/Tifeeh_x">Twitter</a>/
+            <a href="https://www.behance.net/bolujemiriye">Behance</a>
         </div>
     </div>
 
