--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h2>I am a product designer and I enjoy <br>simplifying solutions for digital products.
           <!--   From dy/dx to ui/ux -->
         </h2>
-        <span class="smallheader">To find out more about me click <a href="">here</a></span>
+        <span class="smallheader">To find out more about me click <a href="about.html">here</a></span>
     </div>
 
     <div id="work">
@@ -80,9 +80,9 @@
         <span class="greeting">Get In Touch</span><br><br>
         <span>Designed and Built by me| © 2022 Bolu Jemiriye All Rights Reserved</span><br>
         <div class="socials">
-            <a href="">Email</a>/
-            <a href="">Twitter</a>/
-            <a href="">Behance</a>
+            <a href="bjemiriye@gmail.com">Email</a>/
+            <a href="https://twitter.com/Tifeeh_x">Twitter</a>/
+            <a href="https://www.behance.net/bolujemiriye">Behance</a>
         </div>
     </div>
 
